한이음 공모전 퍼즐까지 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,25 @@
 spring.profiles.active=prod
 
 #web server port number
-server.port=10001
+server.port=10004
 
 #JSP Location
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #DB Information
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/DATA22
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/DATA22
+#spring.datasource.url=jdbc:mariadb://192.168.79.131:3306/springtest
+spring.datasource.url=jdbc:mariadb://mariadb.c13sdjenco3f.ap-northeast-2.rds.amazonaws.com:3306/AducateDB
 
 #DB ID
-spring.datasource.username=springtest
+spring.datasource.username=admin
+#test
 
 #DB password
-spring.datasource.password=1234
+spring.datasource.password=12341234
 
 #DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
@@ -25,3 +29,5 @@ mybatis.type-aliases-package=kopo.poly.dto
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 server.tomcat.additional-tld-skip-patterns=*.jar
+
+server.servlet.jsp.init-parameters.development=true 
